app/assets/stylesheets/custom.scss
@import "bootstrap-sprockets";
@import "bootstrap";

// custom font declarations
@font-face {
  font-family: 'EarthKid';
  src: asset-url('EarthKid.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: 'Roboto';
  src: asset-url('Roboto-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: 'Roboto';
  src: asset-url('Roboto-Bold.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}
@font-face {
  font-family: 'Roboto';
  src: asset-url('Roboto-Italic.ttf') format('truetype');
  font-weight: normal;
  font-style: italic;
}

// variables
$twitter-color: #55acee;
$darker-twitter-color: #4c9bd6;

body {
  font-family: Roboto;
  padding-top: 60px;
  padding-bottom: 60px;
}

// header
header {
  padding-top: 5px;
}
#logo {
  padding-top: 5px;
  float: left;
  font-family: EarthKid;
  font-size: 2em;
  color: $brand-primary;
  &:hover {
    color: $brand-info;
    text-decoration: none;
  }
}

// footer
footer {
  height: 40px;
  text-align: center;
  padding: 10px 0;
  small {
    color: #888;
  }
}

//user panel
#user-panel {
  text-align: center;
}

.btn-inline-block {
  display: inline-block;
  width: 80%;
  margin: 2px 0;
}

// flash messages
.alert {
  text-align: center;
}

// form errors
#error_list {
  ul {
    list-style-type: square;
    li {
      color: $state-danger-text;
    }
  }
}
.field_with_errors {
  @extend .has-error;
  .form-control {
    box-shadow: 0 0 5px $state-danger-text;
    color: $state-danger-text;
  }
}

// twitter buttons
.btn-twitter {
  color: white;
  background-color: $twitter-color;
  &:hover {
    color: white;
    background-color: $darker-twitter-color;
  }
}

// profile picture
.portrait {
  border-radius: 3px;
}
.user-nonactivated {
  border: 2px solid $brand-warning;
}

.table > thead > tr > th {
  text-align: center;
}

.table > tbody > tr {
  td {
    text-align: center;
    vertical-align: middle;
  }
  .left-align {
    text-align: left;
  }
  .right-align {
    text-align: right;
  }
}

textarea {
  width: 100%;
  resize: vertical;
}

.poll {
  box-shadow: 0px 0px 5px #888;
  padding: 20px;
}
.poll-question {
  background-color: $gray-lighter;
  border-radius: 5px;
  padding: 15px;
  text-align: center;
  font-size: 1.5em;
  margin-bottom: 20px;
  img.poll-picture {
    max-width:  400px;
    max-height: 400px;
  }
}

.choice-btns {
  width: 100%;
  padding: 0 10%;
  label.btn {
    display: inline-block;
    text-align: left;
    padding: 10px 20px;
    width: 80%;
  }
}

.graph-bar {
  background-color: $brand-danger;
  height: 20px;
}

.profile-radio-buttons {
  display: inline-block;
  width: 80%;
}
.profile-search-submit {
  display: inline-block;
  float: right;
  width: 15%;
}

#new_comment {
  display: table;
  width: 100%;
  margin-top: 15px;
  .form-group {
    margin-bottom: 5px;
  }
  #comment-count {
    position: relative;
    margin-right: 10px;
  }
  #comment-submit {
    float: right;
    margin-bottom: 5px;
  }
  .valid {
    color: #999;
  }
  .invalid {
    color: $brand-danger;
  }
}

#comments {
  list-style: none;
  padding: 0;
  li {
    padding: 5px;
    border-top: 1px solid #aaa;
    .portrait {
      float: left;
      margin: 5px 10px;
    }
    .user {
      font-weight: 700;
      margin-bottom: 5px;
    }
    .content {
      margin-left: 70px;
      overflow: auto;
      word-wrap: break-word;
    }
    .timestamp {
      margin-left: 70px;
      color: #999;
    }
    .delete {
      float: right;
      margin-right: 20px;
    }
  }
}

